--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Download proxy artifact
         uses: actions/download-artifact@v4
         with:
-          name: safechain-proxy-darwin-${{ matrix.arch }}
+          name: safechain-l7-proxy-darwin-${{ matrix.arch }}
           path: bin
 
       - name: Verify binaries exist
@@ -55,11 +55,11 @@ jobs:
           ls -lh bin/
           ls -lh bin/safechain-ultimate-darwin-${{ matrix.arch }}
           ls -lh bin/safechain-ultimate-ui-darwin-${{ matrix.arch }}
-          ls -lh bin/safechain-proxy-darwin-${{ matrix.arch }}
+          ls -lh bin/safechain-l7-proxy-darwin-${{ matrix.arch }}
 
       - name: Make scripts executable
         run: chmod +x .github/scripts/macos/**/*.sh
-      
+
         # --- macOS signing + notarization (no entitlements for CLI) ---
       - name: Import macOS certificate
         env:
@@ -84,7 +84,7 @@ jobs:
         env:
           DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-proxy-darwin-${{ matrix.arch }}
+        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-l7-proxy-darwin-${{ matrix.arch }}
 
       - name: Build distribution .pkg installer
         run: |
