rename safechain-proxy to safechain-l7-proxy (#106)
* rename safechain-proxy to safechain-l7-proxy

Changes applies to:

- docs
- cargo tooling
- just/make files
- go tooling
- infra scripts (e.g. bash)
- CI

* address aikibot comment (rename windows Go l7 prox)

--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Download proxy artifact
         uses: actions/download-artifact@v4
         with:
-          name: safechain-proxy-darwin-${{ matrix.arch }}
+          name: safechain-l7-proxy-darwin-${{ matrix.arch }}
           path: bin
 
       - name: Verify binaries exist
@@ -59,7 +59,7 @@ jobs:
           ls -lh bin/
           ls -lh bin/safechain-ultimate-darwin-${{ matrix.arch }}
           ls -lh bin/safechain-ultimate-ui-darwin-${{ matrix.arch }}
-          ls -lh bin/safechain-proxy-darwin-${{ matrix.arch }}
+          ls -lh bin/safechain-l7-proxy-darwin-${{ matrix.arch }}
 
       - name: Make scripts executable
         run: chmod +x .github/scripts/macos/**/*.sh
@@ -88,7 +88,7 @@ jobs:
         env:
           DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-proxy-darwin-${{ matrix.arch }}
+        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-l7-proxy-darwin-${{ matrix.arch }}
 
       - name: Build distribution .pkg installer
         run: |
