--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -86,7 +86,7 @@ jobs:
           prefix-key: "musl-zig-0.15.1-build-0.21.3"
       - name: musl build check
         run: |
-          cargo zigbuild -p safechain-proxy --target ${{ matrix.target }} --all-features
+          cargo zigbuild -p safechain-l7-proxy --target ${{ matrix.target }} --all-features
         env:
           AWS_LC_SYS_CMAKE_BUILDER: "0"
 
