prepare codebase for l4 proxy
- add skeleton project for l4 proxy
- make account of secret storage project-specific

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["proxy-bin-l7", "proxy-fuzz", "proxy-lib"]
+members = ["proxy-bin-l4", "proxy-bin-l7", "proxy-fuzz", "proxy-lib"]
 resolver = "3"
 
 [workspace.package]
