--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -32,6 +32,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25"
+      
+      - name: Set up Wails (v3)
+        run: go install github.com/wailsapp/wails/v3/cmd/wails3@latest
+        run: wails3 doctor  # Verify installation
 
       - name: Run tests
         run: make test
@@ -42,7 +46,7 @@ jobs:
       - name: Prepare artifacts
         run: |
           mv bin/safechain-ultimate-darwin-${{ matrix.arch }} safechain-ultimate-darwin-${{ matrix.arch }}
-          mv bin/safechain-ultimate-ui-darwin-${{ matrix.arch }} safechain-ultimate-ui-darwin-${{ matrix.arch }}
+          mv bin/safechain-ultimate-ui-darwin-${{ matrix.arch }}.app safechain-ultimate-ui-darwin-${{ matrix.arch }}.app
 
       - name: Upload safechain-ultimate artifact
         uses: actions/upload-artifact@v4
@@ -50,12 +54,12 @@ jobs:
           name: safechain-ultimate-darwin-${{ matrix.arch }}
           path: |
             safechain-ultimate-darwin-${{ matrix.arch }}
-      - name: Upload safechain-ultimate-ui artifact
+      - name: Upload safechain-ultimate-ui app bundle artifact
         uses: actions/upload-artifact@v4
         with:
-          name: safechain-ultimate-ui-darwin-${{ matrix.arch }}
+          name: safechain-ultimate-ui-darwin-${{ matrix.arch }}.app
           path: |
-            safechain-ultimate-ui-darwin-${{ matrix.arch }}
+            safechain-ultimate-ui-darwin-${{ matrix.arch }}.app
 
   build-unix-proxy:
     strategy:
