fix  Wails installation

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -38,8 +38,9 @@ jobs:
           go-version: "1.25"
       
       - name: Set up Wails (v3)
-        run: go install github.com/wailsapp/wails/v3/cmd/wails3@latest
-        run: wails3 doctor  # Verify installation
+        run: |
+          go install github.com/wailsapp/wails/v3/cmd/wails3@latest
+          wails3 doctor  # Verify installation
 
       - name: Run tests
         run: make test
