Add Wails setup step in Windows build workflow

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,6 +35,11 @@ jobs:
         with:
           go-version: "1.25"
 
+      - name: Set up Wails (v3)
+        run: |
+          go install github.com/wailsapp/wails/v3/cmd/wails3@latest
+          wails3 doctor  # Verify installation
+
       - name: Run tests
         run: make test
         shell: bash
